--- a/index.css
+++ b/index.css
@@ -19,12 +19,12 @@
   transform: rotateX(40deg) translateY(-50%);
   transform-origin: center;
   /* 2222220s */
-  animation: moveLeft 2222220s linear infinite;
+  animation: moveLeft 20s linear infinite;
 }
 
-.trash:nth-child(-n+6) {
-  animation: moveLeft 60s linear infinite;
-}
+/* .trash:nth-child(-n+6) {
+  animation: moveLeft 20s linear infinite;
+} */
 
 @keyframes moveLeft {
   /* Move trash to left */
